Changed coding language

--- a/flask/templates/client.html
+++ b/flask/templates/client.html
@@ -5,6 +5,6 @@
     <title>Perfil do Cliente</title>
 </head>
 <body>
-    <p>Meu nome é {{nome_cliente}}</p>
+    <p>Meu nome é {{client_name}}</p>
 </body>
 </html>
