Create css for homepage

--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -2,10 +2,39 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
-    <h1>"Bem vindos a academia dos fake natty!"</h1>
-    <h2>Aqui voce encontra variados tipos de treinos para atender sua necessidade.</h2>
+    <header class="header">
+        <a href="#" class="logo">
+            <i class="fas fa-dumbbell"></i>FitNess
+        </a>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">Serviços</a>
+            <a href="/contatos">Contatos</a>
+            <a href="#">Valores</a>
+            <a href="#"> | </a>
+            <a href="#">Login</a>
+            <a href="#" class="btn">Increva-se</a>
+        </nav>
+    </header>
+
+    <section class="home">
+        <div class="max-width">
+            <div class="home-content">
+                <h3>ideal para<br/> o SEU corpo</h3>
+                <p>texto aleatorio para encher linguiça com o que ainda vamos colocar aqui
+                então não enche o meu saco Higao</p>
+                <button>Comece agora</button>
+            </div>
+            <div class="home-image">
+                <img src="../static/images/bg.jpg">
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
