Create css for homepage

--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -12,7 +12,7 @@
             <i class="fas fa-dumbbell"></i>FitNess
         </a>
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="/homepage">Home</a>
             <a href="#">Serviços</a>
             <a href="/contatos">Contatos</a>
             <a href="#">Valores</a>
@@ -28,7 +28,7 @@
                 <h3>ideal para<br/> o SEU corpo</h3>
                 <p>texto aleatorio para encher linguiça com o que ainda vamos colocar aqui
                 então não enche o meu saco Higao</p>
-                <button>Comece agora</button>
+                <button class="btn">Comece agora</button>
             </div>
             <div class="home-image">
                 <img src="../static/images/bg.jpg">
