Create CSS style

--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">
+        <a href="/" class="logo">
             <i class="fas fa-dumbbell"></i>FitNess
         </a>
         <nav class="navbar">
-            <a href="/homepage">Home</a>
-            <a href="#">Serviços</a>
+            <a href="/">Home</a>
             <a href="/contatos">Contatos</a>
             <a href="#">Valores</a>
             <a href="#"> | </a>
