--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -13,6 +13,7 @@
         </a>
         <nav class="navbar">
             <a href="/">Home</a>
+            <a id="">
             <a href="/contatos">Contatos</a>
             <a href="#">Valores</a>
             <a href="#"> | </a>
@@ -25,8 +26,8 @@
         <div class="max-width">
             <div class="home-content">
                 <h3>ideal para<br/> o SEU corpo</h3>
-                <p>texto aleatorio para encher linguiça com o que ainda vamos colocar aqui
-                então não enche o meu saco Higao</p>
+                <p>Academia especializada em atingir seus objetivos sejam eles perda de peso,</br>
+                    ganho de massa muscular ou melhora do condicionamento físico.</p>
                 <button class="btn">Comece agora</button>
             </div>
             <div class="home-image">
