Create client registration page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 <body>
@@ -13,12 +13,12 @@
         </a>
         <nav class="navbar">
             <a href="/">Home</a>
-            <a id="">
+            <a href="/planos">Planos</a>
             <a href="/contatos">Contatos</a>
-            <a href="#">Valores</a>
             <a href="#"> | </a>
-            <a href="#">Login</a>
-            <a href="#" class="btn">Increva-se</a>
+            <a href="/login-instrutor">É um instrutor?</a>
+            <a href="/login">Login</a>
+            <a href="/cadastro" class="btn">Increva-se</a>
         </nav>
     </header>
 
@@ -35,6 +35,6 @@
             </div>
         </div>
     </section>
-
+    
 </body>
 </html>
