--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -11,6 +11,9 @@
     text-transform: capitalize;
     font-family: "Poppins", sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #000;
 }
@@ -103,6 +106,30 @@ section{
     width: 50%;
 }
 .home .home-content img{
+    width: 100%;
+    height: 100%;
+}
+.cadastro{
+    display: flex;
+}
+.cadastro .max-width{
+    width: 100%;
+    display: flex;
+}
+.cadastro .cadastro-content{
+    width: 50%;
+    padding: 2rem;
+}
+.cadastro label{
+    color: #fff;
+    margin-top: 6rem;
+    font-size: 16px;
+    font-family: 'Philosopher', sans-serif;
+}
+.cadastro .cadastro-image{
+    width: 50%;
+}
+.cadastro .cadastro-content img{
     width: 100%;
     height: 100%;
 }
