--- a/src/templates/cliente.html
+++ b/src/templates/cliente.html
@@ -5,6 +5,6 @@
     <title>Perfil do Cliente</title>
 </head>
 <body>
-    <p>Meu nome é {{client_name}}</p>
+    <p>Meu nome é {{nome_clinte}}</p>
 </body>
 </html>
