--- a/src/templates/login-instrutor.html
+++ b/src/templates/login-instrutor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Cadastre-se</title>
+    <title>Login Instrutor</title>
     <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
@@ -16,31 +16,15 @@
             <a href="/planos">Planos</a>
             <a href="/contatos">Contatos</a>
             <a href="#"> | </a>
-            <a href="/login-instrutor">É um instrutor?</a>
             <a href="/login">Login</a>
+            <a href="/cadastro" class="btn">Increva-se</a>
         </nav>
     </header>
 
     <section class="cadastro">
         <div class="max-width">
             <div class="cadastro-content">
-                <form method="post">
-                    <div>
-                        <label for="nome_cliente">Nome:</label>
-                        <input type="text" id="nome" name="nome" required>
-                    </div>
-                    <div>
-                        <label for="sobrenome">Sobrenome:</label>
-                        <input type="text" id="sobrenome" name="sobrenome" required>
-                    </div>
-                    <div>
-                        <label for="cpf">CPF:</label>
-                        <input type="text" id="cpf" name="cpf" required>
-                    </div>
-                    <div>
-                        <label for="data_nascimento">Data de nascimento:</label>
-                        <input type="text" id="data_nascimento" name="data_nascimento" required>
-                    </div>
+                <form method="get">
                     <div>
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
@@ -49,13 +33,9 @@
                         <label for="senha">Senha:</label>
                         <input type="password" id="senha" name="senha" required>
                     </div>
-                    <div>
-                        <label for="telefone">Telefone:</label>
-                        <input type="text" id="telefone" name="telefone" required>
-                    </div>
                 
                     <div>
-                        <input class="btn" type="submit" value="Cadastrar">
+                        <input class="btn" type="submit" value="Login">
                     </div>
                 </form>
             </div>
