--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -97,10 +97,22 @@ section{
     font-size: 5rem;
     font-family: 'Philosopher', sans-serif;
 }
+.home h4{
+    color: #fff;
+    margin-top: 2rem;
+    font-size: 3rem;
+    font-family: 'Philosopher', sans-serif;
+}
+.home h5{
+    color: #fff;
+    margin-top: 2rem;
+    font-size: 2rem;
+    font-family: 'Philosopher', sans-serif;
+}
 .home p{
     color: rgb(194, 191, 191);
     margin-top: 1rem;
-    font-size: 12px;
+    font-size: 13px;
 }
 .home .home-image{
     width: 50%;
