--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -13,8 +13,6 @@
         </a>
         <nav class="navbar">
             <a href="/">Home</a>
-            <a href="/planos">Planos</a>
-            <a href="/contatos">Contatos</a>
             <a href="#"> | </a>
             <a href="/login-instrutor">É um instrutor?</a>
             <a href="/login">Login</a>
@@ -52,6 +50,13 @@
                     <div>
                         <label for="telefone">Telefone:</label>
                         <input type="text" id="telefone" name="telefone" required>
+                    </div>
+                    <div>
+                        <label for="plano_mensal">Selecione um plano:</label>
+                        <select id="plano_mensal" name="plano_mensal">
+                            <option value="1">Básico</option>
+                            <option value="2">VIP</option>
+                        </select>
                     </div>
                 
                     <div>
