--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -13,8 +13,6 @@
         </a>
         <nav class="navbar">
             <a href="/">Home</a>
-            <a href="/planos">Planos</a>
-            <a href="/contatos">Contatos</a>
             <a href="#"> | </a>
             <a href="/login-instrutor">É um instrutor?</a>
             <a href="/login">Login</a>
@@ -28,7 +26,18 @@
                 <h3>ideal para<br/> o SEU corpo</h3>
                 <p>Academia especializada em atingir seus objetivos sejam eles perda de peso,</br>
                     ganho de massa muscular ou melhora do condicionamento físico.</p>
+                <h4>Conheça nossos planos:</h4>
+                <h5>Plano Básico:</h5>
+                <p>Você terá acesso as aulas de musculação e aulas de cardio totalmente</br>
+                adequadas e planejadas pelos nossos intrutores para suas necessidades e condicionamento físico.</p>
+                <h5>Plano VIP:</h5>
+                <p>Além das aulas de musculação e cardio, você também terá acesso às aulas de Fitdance e Lutas totalmente 
+                    adequadas e planejadas pelos nossos intrutores para suas necessidades e condicionamento físico.</p>
                 <button class="btn">Comece agora</button>
+                <h5>Endereço e contatos:</h5>
+                <p>Estamos localizados na Rua ### nº1, Jd Amanda Hortolândia - SP</p>
+                <p>Telefone e WhatsApp: 19 91234-5678 | 19 92345-6789</br>
+                Email: academia@gmail.com</p>
             </div>
             <div class="home-image">
                 <img src="../static/images/bg.jpg">
