--- a/src/templates/ficha-treino.html
+++ b/src/templates/ficha-treino.html
@@ -19,37 +19,35 @@
     <section class="home">
         <div class="max-width">
             <div class="home-content">
-                <!-- use {{}} to access the render_template vars-->
-                <p>{{ficha_treino.data_criacao}}</p>
-                <p>{{ficha_treino.descricao}}</p>
-                <p>{{ficha_treino.duracao_treino}}</p>
-                <p>{{ficha_treino.ombro_lateral}}</p>
-                <p>{{ficha_treino.ombro_frontal}}</p>
-                <p>{{ficha_treino.supino_reto}}</p>
-                <p>{{ficha_treino.supino_inclinado}}</p>
-                <p>{{ficha_treino.crucifixo}}</p>
-                <p>{{ficha_treino.puxador_frontal}}</p>
-                <p>{{ficha_treino.puxador_costas}}</p>
-                <p>{{ficha_treino.remada_baixa}}</p>
-                <p>{{ficha_treino.remada_cavalo}}</p>
-                <p>{{ficha_treino.triceps_corda}}</p>
-                <p>{{ficha_treino.triceps_pulley}}</p>
-                <p>{{ficha_treino.rosca_biceps}}</p>
-                <p>{{ficha_treino.rosca_martelo}}</p>
-                <p>{{ficha_treino.agachamento}}</p>
-                <p>{{ficha_treino.legpress}}</p>
-                <p>{{ficha_treino.cadeira_extensora}}</p>
-                <p>{{ficha_treino.cadeira_flexora}}</p>
-                <p>{{ficha_treino.panturrilhas}}</p>
-                <p>{{ficha_treino.cardio}}</p>
-                <p>{{ficha_treino.luta}}</p>
-                <p>{{ficha_treino.fk_Cliente_id_cliente}}</p>
+                <p>Data de criação: {{ficha_treino.data_criacao}}</p>
+                <p>Descrição: {{ficha_treino.descricao}}</p>
+                <p>Duração do treino: {{ficha_treino.duracao_treino}}</p>
+                <p>Ombro lateral: {{ficha_treino.ombro_lateral}}</p>
+                <p>Ombro frontal: {{ficha_treino.ombro_frontal}}</p>
+                <p>Supino reto: {{ficha_treino.supino_reto}}</p>
+                <p>Supino inclinado: {{ficha_treino.supino_inclinado}}</p>
+                <p>Crucifixo: {{ficha_treino.crucifixo}}</p>
+                <p>Puxador frontal: {{ficha_treino.puxador_frontal}}</p>
+                <p>Puxador costas: {{ficha_treino.puxador_costas}}</p>
+                <p>Remada baixa: {{ficha_treino.remada_baixa}}</p>
+                <p>Remada cavalo: {{ficha_treino.remada_cavalo}}</p>
+                <p>Triceps corda: {{ficha_treino.triceps_corda}}</p>
+                <p>Triceps pulley: {{ficha_treino.triceps_pulley}}</p>
+                <p>Rosca biceps: {{ficha_treino.rosca_biceps}}</p>
+                <p>Rosca martelo: {{ficha_treino.rosca_martelo}}</p>
+                <p>Agachamento: {{ficha_treino.agachamento}}</p>
+                <p>Legpress: {{ficha_treino.legpress}}</p>
+                <p>Cadeira extensora: {{ficha_treino.cadeira_extensora}}</p>
+                <p>Cadeira flexora: {{ficha_treino.cadeira_flexora}}</p>
+                <p>Panturrilhas: {{ficha_treino.panturrilhas}}</p>
+                <p>Cardio: {{ficha_treino.cardio}}</p>
+                <p>Luta: {{ficha_treino.luta}}</p>
+                <p>Id do cliente: {{ficha_treino.fk_Cliente_id_cliente}}</p>
             </div>
             <div class="home-image">
                 <img src="../static/images/bg.jpg">
             </div>
         </div>
     </section>
-    
 </body>
 </html>
