--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -24,7 +24,7 @@
     <section class="cadastro">
         <div class="max-width">
             <div class="cadastro-content">
-                <form method="get">
+                <form method="POST" action="/logar_cliente">
                     <div>
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
