--- a/src/templates/login-instrutor.html
+++ b/src/templates/login-instrutor.html
@@ -24,7 +24,7 @@
     <section class="cadastro">
         <div class="max-width">
             <div class="cadastro-content">
-                <form method="get">
+                <form method="POST" action="/logar-instrutor">
                     <div>
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" required>
@@ -33,7 +33,7 @@
                         <label for="senha">Senha:</label>
                         <input type="password" id="senha" name="senha" required>
                     </div>
-                
+
                     <div>
                         <input class="btn" type="submit" value="Login">
                     </div>
@@ -44,6 +44,5 @@
             </div>
         </div>
     </section>
-
 </body>
 </html>
