--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -13,17 +13,24 @@
         </a>
         <nav class="navbar">
             <a href="/">Home</a>
-            <a href="/planos">Planos</a>
-            <a href="/contatos">Contatos</a>
             <a href="#"> | </a>
-            <a href="/login-instrutor">É um instrutor?</a>
             <a href="/cadastro" class="btn">Increva-se</a>
         </nav>
     </header>
 
     <section class="cadastro">
+        <!-- Adicione esta div ao seu arquivo HTML -->
+        <div id="mensagemErro" style="display: none;"></div>
+
         <div class="max-width">
             <div class="cadastro-content">
+                <script>
+                    function exibirErro(mensagem) {
+                        var mensagemErroDiv = document.getElementById("mensagemErro");
+                        mensagemErroDiv.innerText = mensagem;
+                        mensagemErroDiv.style.display = "block";
+                    }
+                </script>
                 <form method="POST" action="/logar_cliente">
                     <div>
                         <label for="email">Email:</label>
